--- a/config.sample.json
+++ b/config.sample.json
@@ -1,7 +1,8 @@
 {
   "baseChain": {
+    "symbol": "lsk",
     "hostURL": "http://11.11.11.11:7000",
-    "senderWallets": [
+    "userWallets": [
       {
         "address": "",
         "passphrase": ""
@@ -12,8 +13,9 @@
     }
   },
   "quoteChain": {
+    "symbol": "lsh",
     "hostURL": "http://11.11.11.11:7010",
-    "senderWallets": [
+    "userWallets": [
       {
         "address": "",
         "passphrase": ""
